--- a/styling.css
+++ b/styling.css
@@ -109,8 +109,6 @@ body,html{
 	height: auto;
 	grid-template-columns: repeat(3,1fr);
 	margin: 20px 0;
-/*	display: flex;*/
-/*	flex-direction: column;*/
 }
 
 .grid2 h2, #intro1 h2, .grid3 h2, .grid5 h2, #media h2, #slider2 h2{
@@ -187,8 +185,6 @@ body,html{
 	display: grid;
 }
 
-
-
 .grid5 {
 	display: grid;
 	grid-template-rows: 1fr,1fr;
@@ -225,14 +221,14 @@ body,html{
 }
 
 .media1 p{
-	margin-bottom: 0px;
+	margin: 0px;
 }
 
 .grid7 {
 	display: grid;
 	grid-template-columns: repeat(2,1fr);
-	grid-gap: 40px;
-	padding-top: 40px;
+	grid-gap: 5%;
+	padding: 30px 0;
 }
 
 .grid7 a{
@@ -324,17 +320,6 @@ body,html{
 	width: 34%;
 	height: 100%;
 }
-
-#slider_menu {
-	position: absolute;
-	bottom: 15px;
-	right: 15px;
-	display: flex; 
-	flex-direction: row-reverse;
-	margin: 5px;
-/*	border: 1px solid black;*/
-}
-
 
 .button2 {
 	margin: 1px;
@@ -452,7 +437,7 @@ body,html{
 	position: relative;
 }
 
-#close {
+#close1 {
 	position: absolute;
 	height: 30px;
 	width: 30px;
@@ -469,3 +454,41 @@ body,html{
 	padding: 175px 380px;
 	background-repeat: no-repeat;
 }
+
+#popup1 {
+	display: none;
+}
+
+#popup2 {
+	display: none;
+}
+
+#close2 {
+	position: absolute;
+	height: 30px;
+	width: 30px;
+	top: -16px;
+	right: -16px;
+	cursor: pointer;
+	background-image: url(images/photoes/close.png);
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
+}
+
+.pos-iframe {
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 580px;
+    height: 345px;
+    border: 0;
+}
+
+.vid2 {
+	position: relative;
+    overflow: hidden;
+    padding: 56.25%;
+	max-height: 100px;
+}
+
+
