--- a/styling.css
+++ b/styling.css
@@ -25,11 +25,12 @@ body,html{
 	flex: 1 1 auto;
 }
 
-	@media only screen and (max-width: 1200px) {
-	  #logo {
-		  display: flex;
-	  }
+@media only screen and (max-width: 1200px) {
+	#logo {
+		display: flex;
 	}
+}
+
 
 #logo img {
 	margin: 3% auto;
@@ -111,6 +112,17 @@ body,html{
 	margin: 20px 0;
 }
 
+@media only screen and (max-width: 1200px) {
+	#grid1-1{
+		grid-column: 1 / span 3;
+	}
+	.grid2{
+		align-content: center;
+	}
+	.grid1{
+	}
+}
+
 .grid2 h2, #intro1 h2, .grid3 h2, .grid5 h2, #media h2, #slider2 h2{
 	font-size: 20px;
 	text-transform: uppercase;
@@ -153,9 +165,6 @@ body,html{
 	border: 1px solid hsl(131,60%,50%);
 	width: 200px;
 	height: 25px;
-	position: absolute;
-	bottom: 50px;
-	left: 30px;
 }
 .button1 img{
 	padding: 2px;
@@ -178,6 +187,11 @@ body,html{
 	padding: 20px 0;
 	display: grid;
 	grid-template-columns: repeat(3,1fr);
+}
+
+.continue-reading .more-text
+{
+  display: none;
 }
 
 .grid3 {
@@ -492,4 +506,13 @@ body,html{
 	max-height: 100px;
 }
 
+@media only screen and (max-width: 1200px) {
+	
+}
 
+
+#slid-btn {
+	position: absolute;
+	bottom: 50px;
+	left: 30px;
+}
